# simple_processor_launcher

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  README.md
ProcLaunchLib/: CMakeLists.txt
ProcLaunchLib/src/: GPUCreate.cpp  GPUProcessorLauncher.cpp  GPUProcessorLauncher.h
ProcLaunchLib/tests/: GPUProcessorLauncherTests.cpp  GainSpecification.h  TestCommon.h
common/include/: AudioFile.h
fir_launcher/: CMakeLists.txt
fir_launcher/include/fir_processor/: FirSpecification.h
fir_launcher/src/: fir_launcher.cpp
gain_launcher/: CMakeLists.txt
gain_launcher/src/: gain_launcher.cpp
iir_launcher/: CMakeLists.txt
iir_launcher/include/iir_processor/: IirSpecification.h
iir_launcher/src/: iir_launcher.cpp
include/: GPUCreate.h  ProcessorLauncherInterface.h
